--- a/scss/blocks/lead-section.scss
+++ b/scss/blocks/lead-section.scss
@@ -28,10 +28,14 @@
         font-weight: 700;
         line-height: 96%;
 
-        @include breakpointMF(laptop) {
+        @include breakpointMF(tablet) {
             width: 100%;
-            margin-bottom: 4rem;
+            text-align: center;
+        }
 
+        @include breakpointMF(laptop) {
+            margin-bottom: 4rem;
+            text-align: left;
             font-size: 3.6rem;
         }
     }
@@ -41,10 +45,16 @@
         flex-wrap: wrap;
         gap: 13px 11px;
 
-        width: 100%;
+        max-width: 100%;
+
+        @include breakpointMF(tablet) {
+            max-width: 35rem;
+            margin-inline: auto;
+        }
 
         @include breakpointMF(laptop) {
             max-width: 63rem;
+            margin-inline: unset;
         }
     }
 
@@ -105,7 +115,7 @@
         transform: translate(-50%, -50%);
 
         @include breakpointMF(tablet) {
-            width: 25%;
+            width: 18.5rem;
         }
 
         @include breakpointMF(laptop) {
