--- a/scss/blocks/partners-section.scss
+++ b/scss/blocks/partners-section.scss
@@ -2,7 +2,7 @@
 
 .partners-section {
     padding-block: 6rem 5rem;
-    color: var(--color-red, #ee725e);
+    color: var(--color-bronze, #ee725e);
 
     @include breakpointMF(laptop) {
         padding-block: 4.6rem 5.2rem;
