--- a/scss/blocks/reviews-section.scss
+++ b/scss/blocks/reviews-section.scss
@@ -4,7 +4,7 @@
     position: relative;
     padding-block: 26px 0;
 
-    color: var(--color-red, #ee725e);
+    color: var(--color-bronze, #ee725e);
 
     &::before {
         position: absolute;
