--- a/scss/blocks/lead-section.scss
+++ b/scss/blocks/lead-section.scss
@@ -21,7 +21,7 @@
         width: min-content;
         margin-bottom: 6px;
 
-        color: var(--color-red, #ee725e);
+        color: var(--color-bronze, #ee725e);
         font-family: Montserrat;
         font-size: 20px;
         font-style: normal;
