--- a/scss/blocks/personal-section.scss
+++ b/scss/blocks/personal-section.scss
@@ -85,12 +85,19 @@
         flex: 0 1 calc(100% / 3 - (0.5rem * 2 / 3));
     }
 
+    &__column-list {
+        min-width: 28%;
+
+        @include breakpointMF(laptop) {
+            min-width: 50%;
+        }
+    }
+
     &__column {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-
     }
 
     &__column-title {
