--- a/scss/blocks/prime-btn.scss
+++ b/scss/blocks/prime-btn.scss
@@ -48,7 +48,7 @@
 
     &.prime-btn--light {
         background-color: var(--color-latte, #fff8e7);
-        color: var(--color-red, #ee725e);
+        color: var(--color-bronze, #ee725e);
     }
 
     &.prime-btn--olive {
